# AI_story_generator

./: README.md  create_story.py  create_story_w_feedback.py  pyproject.toml  story_generator.py
instructions/: Isaac_Asimov.json  Love_story.json
scripts/: test.sh
stories/: The Comfort Imperative.pkl  The Comfort Imperative.txt  The Surgeon's Dilemma.pkl  The Surgeon's Dilemma.txt
