[tool.poetry]
name = "ai-story-generator"
version = "0.1.0"
description = ""
authors = ["benste <benstmrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.42.3"
torch = "^2.3.1"
accelerate = "^0.32.1"
llama-cpp-python = "^0.2.82"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
